--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,9 @@ after_success:
   - docker build -t 510ravikothari/multi-nginx -f ./nginx
   - docker build -t 510ravikothari/multi-server -f ./server
   - docker build -t 510ravikothari/multi-worker -f ./worker
+
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker push 510ravikothari/multi-client
+  - docker push 510ravikothari/multi-nginx
+  - docker push 510ravikothari/multi-server
+  - docker push 510ravikothari/multi-worker
