--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ script:
   - docker run -e CI=true 510ravikothari/react-test npm test
 
 after_success:
-  - docker build -t 510ravikothari/multi-client -f ./client
-  - docker build -t 510ravikothari/multi-nginx -f ./nginx
-  - docker build -t 510ravikothari/multi-server -f ./server
-  - docker build -t 510ravikothari/multi-worker -f ./worker
+  - docker build -t 510ravikothari/multi-client ./client
+  - docker build -t 510ravikothari/multi-nginx ./nginx
+  - docker build -t 510ravikothari/multi-server ./server
+  - docker build -t 510ravikothari/multi-worker ./worker
 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push 510ravikothari/multi-client
